--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-12-09  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* nmz/util.c (nmz_debug_printf): Renamed from nmz_dprintf. (undo)
+	(nmz_warn_printf): Renamed from nmz_wprintf. (undo) [namazu-dev 963]
+
 	* nmz/search.c (binsearch): Chomp term.
 	(show_status): Chomp buf.
 
