--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,11 @@
+1999-12-09  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* ja.po: Update messages.
+
+	* POTFILES.in: Add nmz/util.c
+	Add nmz/alias.c
+	Add nmz/replace.c
+
 1999-12-07  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* POTFILES.in: s/conf.c/rcfile.c/.
