--- a/po/ja.po
+++ b/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 1999-11-24 07:49+0900\n"
+"POT-Creation-Date: 1999-12-09 19:23+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -13,12 +13,12 @@ msgstr ""
 "Content-Type: text/plain; charset=EUC-JP\n"
 "Content-Transfer-Encoding: 8-bit\n"
 
-#: nmz/conf.c:479
+#: nmz/rcfile.c:435
 #, c-format
 msgid "Config:  %s\n"
 msgstr "設定ファイル:  %s\n"
 
-#: nmz/conf.c:482
+#: nmz/rcfile.c:438
 #, c-format
 msgid ""
 "Default: %s\n"
@@ -33,101 +33,111 @@ msgstr ""
 "標準の言語: %s\n"
 "スコア計算: %s\n"
 
-#: nmz/conf.c:495
+#: nmz/util.c:536
+msgid "Fatal error occered!"
+msgstr "致命的なエラー"
+
+#: nmz/util.c:542
+msgid "Invalid query"
+msgstr "不正な idxname の指定です"
+
+#: nmz/util.c:545
+#, fuzzy
+msgid "Too many query tokens"
+msgstr "検索式の項目が多すぎます\n"
+
+#: nmz/util.c:548
+msgid "Too many words matched. Ignored"
+msgstr "マッチする単語が多すぎるので無視しました"
+
+#: nmz/util.c:551
+msgid "Too many pages hit. Ignored"
+msgstr "ヒット数が多すぎるので無視しました"
+
+#: nmz/util.c:554
+msgid "cannot open regex index"
+msgstr "正規表現用インデックスが開けませんでした"
+
+#: nmz/util.c:557
+msgid "cannot open phrase index"
+msgstr "フレイズ検索用インデックスが開けませんでした"
+
+#: nmz/util.c:560
+msgid "cannot open this index"
+msgstr "インデックスが開けませんでした"
+
+#: nmz/util.c:563
+msgid "You don't have a permission to access the index"
+msgstr "インデックスにアクセスする権利がありません"
+
+#: nmz/util.c:566
+msgid "Unknown error. Report bug!"
+msgstr "不明なエラー。バグ報告してください"
+
+#: nmz/alias.c:96
 #, c-format
 msgid "Alias:   \"%s\" -> \"%s\"\n"
 msgstr "別名:   \"%s\" -> \"%s\"\n"
 
-#: nmz/conf.c:504
+#: nmz/replace.c:210
 #, c-format
 msgid "Replace: \"%s\" -> \"%s\"\n"
 msgstr "置換: \"%s\" -> \"%s\"\n"
 
-#: src/cgi.c:109 src/cgi.c:119
+#: src/cgi.c:111 src/cgi.c:121
 msgid "Invalid idxname."
 msgstr "不正な idxname の指定です"
 
-#: src/cgi.c:191 src/cgi.c:206
+#: src/cgi.c:193 src/cgi.c:208
 msgid "Too long QUERY_STRING"
 msgstr "CGIの QUERY_STRING が長すぎます"
 
-#: src/namazu.c:316
-msgid ""
-"\t<h2>Error!</h2>\n"
-"<p>Invalid query.</p>\n"
-msgstr ""
-"\t<h2>エラー!</h2>\n"
-"<p>検索式が不正です。</p>\n"
-
-#: src/namazu.c:320
-msgid ""
-"\t<h2>Error!</h2>\n"
-"<p>Too many query tokens.</p>\n"
-msgstr ""
-"\t<h2>エラー!</h2>\n"
-"<p>検索式の項目が多すぎます。</p>\n"
-
-#: src/namazu.c:369
-msgid "\t<p>No document matching your query.</p>\n"
-msgstr "\t<p>検索式にマッチする文書はありませんでした。</p>\n"
-
-#: src/output.c:355
+#: src/output.c:352
 msgid "\t<strong>Page:</strong> "
 msgstr "\t<strong>ペイジ:</strong> "
 
-#: src/output.c:397
+#: src/output.c:394
 #, c-format
 msgid "Current List: %d"
 msgstr "現在のリスト: %d"
 
-#: src/output.c:536
+#: src/output.c:436
 #, c-format
 msgid " [ TOTAL: %d ]"
 msgstr " [ 合計: %d ]"
 
-#: src/output.c:560
-msgid " (Too many words matched. Ignored.)"
-msgstr " (マッチする単語が多すぎるので無視しました)"
-
-#: src/output.c:562
-msgid " (Too many pages hit. Ignored.)"
-msgstr " (ヒット数が多すぎるので無視しました)"
-
-#: src/output.c:564
-msgid " (cannot open regex index)"
-msgstr " (正規表現用インデックスが開けませんでした)"
-
-#: src/output.c:566
-msgid " (cannot open phrase index)"
-msgstr " (フレイズ検索用インデックスが開けませんでした)"
-
-#: src/output.c:568
-msgid " (cannot open this index)\n"
-msgstr " (インデックスが開けませんでした)\n"
-
-#: src/output.c:570
-msgid "(You don't have a permission to access the index)"
-msgstr "（インデックスにアクセスする権利がありません）"
-
-#: src/output.c:580
-msgid "\t<h2>Results:</h2>\n"
-msgstr "\t<h2>検索結果</h2>\n"
-
-#: src/output.c:587
-msgid "References: "
-msgstr "参考ヒット数: "
-
-#: src/output.c:595
+#: src/output.c:445
 msgid "\t<p><strong> Total "
 msgstr "\t<p><strong>検索式にマッチする "
 
-#: src/output.c:602
+#: src/output.c:452
 msgid ""
 "\t documents matching your query.</strong></p>\n"
 "\n"
 msgstr ""
 "\t 個の文書が見つかりました。</strong></p>\n"
 "\n"
+
+#: src/output.c:512
+#, c-format
+msgid ""
+"\t<h2>Error!</h2>\n"
+"<p>%s</p>\n"
+msgstr ""
+"\t<h2>エラー!</h2>\n"
+"<p>%s</p>\n"
+
+#: src/output.c:522
+msgid "\t<h2>Results:</h2>\n"
+msgstr "\t<h2>検索結果</h2>\n"
+
+#: src/output.c:529
+msgid "References: "
+msgstr "参考ヒット数: "
+
+#: src/output.c:571
+msgid "\t<p>No document matching your query.</p>\n"
+msgstr "\t<p>検索式にマッチする文書はありませんでした。</p>\n"
 
 #: src/usage.c:49
 #, c-format
