--- a/po/ja_JP.SJIS.po
+++ b/po/ja_JP.SJIS.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 1999-11-24 07:49+0900\n"
+"POT-Creation-Date: 1999-12-09 19:23+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -13,12 +13,12 @@ msgstr ""
 "Content-Type: text/plain; charset=Shift_JIS\n"
 "Content-Transfer-Encoding: 8-bit\n"
 
-#: nmz/conf.c:479
+#: nmz/rcfile.c:435
 #, c-format
 msgid "Config:  %s\n"
 msgstr "\220\335\222\350\203\164\203\100\203\103\203\213:  %s\n"
 
-#: nmz/conf.c:482
+#: nmz/rcfile.c:438
 #, c-format
 msgid ""
 "Default: %s\n"
@@ -33,101 +33,111 @@ msgstr ""
 "\225\127\217\200\202\314\214\276\214\352: %s\n"
 "\203\130\203\122\203\101\214\166\216\132: %s\n"
 
-#: nmz/conf.c:495
+#: nmz/util.c:536
+msgid "Fatal error occered!"
+msgstr "\222\166\226\275\223\111\202\310\203\107\203\211\201\133"
+
+#: nmz/util.c:542
+msgid "Invalid query"
+msgstr "\225\163\220\263\202\310 idxname \202\314\216\167\222\350\202\305\202\267"
+
+#: nmz/util.c:545
+#, fuzzy
+msgid "Too many query tokens"
+msgstr "\214\237\215\365\216\256\202\314\215\200\226\332\202\252\221\275\202\267\202\254\202\334\202\267\n"
+
+#: nmz/util.c:548
+msgid "Too many words matched. Ignored"
+msgstr "\203\175\203\142\203\140\202\267\202\351\222\120\214\352\202\252\221\275\202\267\202\254\202\351\202\314\202\305\226\263\216\213\202\265\202\334\202\265\202\275"
+
+#: nmz/util.c:551
+msgid "Too many pages hit. Ignored"
+msgstr "\203\161\203\142\203\147\220\224\202\252\221\275\202\267\202\254\202\351\202\314\202\305\226\263\216\213\202\265\202\334\202\265\202\275"
+
+#: nmz/util.c:554
+msgid "cannot open regex index"
+msgstr "\220\263\213\113\225\134\214\273\227\160\203\103\203\223\203\146\203\142\203\116\203\130\202\252\212\112\202\257\202\334\202\271\202\361\202\305\202\265\202\275"
+
+#: nmz/util.c:557
+msgid "cannot open phrase index"
+msgstr "\203\164\203\214\203\103\203\131\214\237\215\365\227\160\203\103\203\223\203\146\203\142\203\116\203\130\202\252\212\112\202\257\202\334\202\271\202\361\202\305\202\265\202\275"
+
+#: nmz/util.c:560
+msgid "cannot open this index"
+msgstr "\203\103\203\223\203\146\203\142\203\116\203\130\202\252\212\112\202\257\202\334\202\271\202\361\202\305\202\265\202\275"
+
+#: nmz/util.c:563
+msgid "You don't have a permission to access the index"
+msgstr "\203\103\203\223\203\146\203\142\203\116\203\130\202\311\203\101\203\116\203\132\203\130\202\267\202\351\214\240\227\230\202\252\202\240\202\350\202\334\202\271\202\361"
+
+#: nmz/util.c:566
+msgid "Unknown error. Report bug!"
+msgstr "\225\163\226\276\202\310\203\107\203\211\201\133\201\102\203\157\203\117\225\361\215\220\202\265\202\304\202\255\202\276\202\263\202\242"
+
+#: nmz/alias.c:96
 #, c-format
 msgid "Alias:   \"%s\" -> \"%s\"\n"
 msgstr "\225\312\226\274:   \"%s\" -> \"%s\"\n"
 
-#: nmz/conf.c:504
+#: nmz/replace.c:210
 #, c-format
 msgid "Replace: \"%s\" -> \"%s\"\n"
 msgstr "\222\165\212\267: \"%s\" -> \"%s\"\n"
 
-#: src/cgi.c:109 src/cgi.c:119
+#: src/cgi.c:111 src/cgi.c:121
 msgid "Invalid idxname."
 msgstr "\225\163\220\263\202\310 idxname \202\314\216\167\222\350\202\305\202\267"
 
-#: src/cgi.c:191 src/cgi.c:206
+#: src/cgi.c:193 src/cgi.c:208
 msgid "Too long QUERY_STRING"
 msgstr "CGI\202\314 QUERY_STRING \202\252\222\267\202\267\202\254\202\334\202\267"
 
-#: src/namazu.c:316
-msgid ""
-"\t<h2>Error!</h2>\n"
-"<p>Invalid query.</p>\n"
-msgstr ""
-"\t<h2>\203\107\203\211\201\133!</h2>\n"
-"<p>\214\237\215\365\216\256\202\252\225\163\220\263\202\305\202\267\201\102</p>\n"
-
-#: src/namazu.c:320
-msgid ""
-"\t<h2>Error!</h2>\n"
-"<p>Too many query tokens.</p>\n"
-msgstr ""
-"\t<h2>\203\107\203\211\201\133!</h2>\n"
-"<p>\214\237\215\365\216\256\202\314\215\200\226\332\202\252\221\275\202\267\202\254\202\334\202\267\201\102</p>\n"
-
-#: src/namazu.c:369
-msgid "\t<p>No document matching your query.</p>\n"
-msgstr "\t<p>\214\237\215\365\216\256\202\311\203\175\203\142\203\140\202\267\202\351\225\266\217\221\202\315\202\240\202\350\202\334\202\271\202\361\202\305\202\265\202\275\201\102</p>\n"
-
-#: src/output.c:355
+#: src/output.c:352
 msgid "\t<strong>Page:</strong> "
 msgstr "\t<strong>\203\171\203\103\203\127:</strong> "
 
-#: src/output.c:397
+#: src/output.c:394
 #, c-format
 msgid "Current List: %d"
 msgstr "\214\273\215\335\202\314\203\212\203\130\203\147: %d"
 
-#: src/output.c:536
+#: src/output.c:436
 #, c-format
 msgid " [ TOTAL: %d ]"
 msgstr " [ \215\207\214\166: %d ]"
 
-#: src/output.c:560
-msgid " (Too many words matched. Ignored.)"
-msgstr " (\203\175\203\142\203\140\202\267\202\351\222\120\214\352\202\252\221\275\202\267\202\254\202\351\202\314\202\305\226\263\216\213\202\265\202\334\202\265\202\275)"
-
-#: src/output.c:562
-msgid " (Too many pages hit. Ignored.)"
-msgstr " (\203\161\203\142\203\147\220\224\202\252\221\275\202\267\202\254\202\351\202\314\202\305\226\263\216\213\202\265\202\334\202\265\202\275)"
-
-#: src/output.c:564
-msgid " (cannot open regex index)"
-msgstr " (\220\263\213\113\225\134\214\273\227\160\203\103\203\223\203\146\203\142\203\116\203\130\202\252\212\112\202\257\202\334\202\271\202\361\202\305\202\265\202\275)"
-
-#: src/output.c:566
-msgid " (cannot open phrase index)"
-msgstr " (\203\164\203\214\203\103\203\131\214\237\215\365\227\160\203\103\203\223\203\146\203\142\203\116\203\130\202\252\212\112\202\257\202\334\202\271\202\361\202\305\202\265\202\275)"
-
-#: src/output.c:568
-msgid " (cannot open this index)\n"
-msgstr " (\203\103\203\223\203\146\203\142\203\116\203\130\202\252\212\112\202\257\202\334\202\271\202\361\202\305\202\265\202\275)\n"
-
-#: src/output.c:570
-msgid "(You don't have a permission to access the index)"
-msgstr "\201\151\203\103\203\223\203\146\203\142\203\116\203\130\202\311\203\101\203\116\203\132\203\130\202\267\202\351\214\240\227\230\202\252\202\240\202\350\202\334\202\271\202\361\201\152"
-
-#: src/output.c:580
-msgid "\t<h2>Results:</h2>\n"
-msgstr "\t<h2>\214\237\215\365\214\213\211\312</h2>\n"
-
-#: src/output.c:587
-msgid "References: "
-msgstr "\216\121\215\154\203\161\203\142\203\147\220\224: "
-
-#: src/output.c:595
+#: src/output.c:445
 msgid "\t<p><strong> Total "
 msgstr "\t<p><strong>\214\237\215\365\216\256\202\311\203\175\203\142\203\140\202\267\202\351 "
 
-#: src/output.c:602
+#: src/output.c:452
 msgid ""
 "\t documents matching your query.</strong></p>\n"
 "\n"
 msgstr ""
 "\t \214\302\202\314\225\266\217\221\202\252\214\251\202\302\202\251\202\350\202\334\202\265\202\275\201\102</strong></p>\n"
 "\n"
+
+#: src/output.c:512
+#, fuzzy, c-format
+msgid ""
+"\t<h2>Error!</h2>\n"
+"<p>%s</p>\n"
+msgstr ""
+"\t<h2>\203\107\203\211\201\133!</h2>\n"
+"<p>%s</p>\n"
+
+#: src/output.c:522
+msgid "\t<h2>Results:</h2>\n"
+msgstr "\t<h2>\214\237\215\365\214\213\211\312</h2>\n"
+
+#: src/output.c:529
+msgid "References: "
+msgstr "\216\121\215\154\203\161\203\142\203\147\220\224: "
+
+#: src/output.c:571
+msgid "\t<p>No document matching your query.</p>\n"
+msgstr "\t<p>\214\237\215\365\216\256\202\311\203\175\203\142\203\140\202\267\202\351\225\266\217\221\202\315\202\240\202\350\202\334\202\271\202\361\202\305\202\265\202\275\201\102</p>\n"
 
 #: src/usage.c:49
 #, c-format
