--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-12-10  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* nmz/hlist.h: Remove badly made prototypes.
+
+	* configure.in (AM_INIT_AUTOMAKE): Change a version number to 1.9.10.
+
 	* src/cgi.c (process_cgi_var_sort): Fix a serious CGI bug.
 
 	* nmz/hlist.c (set_sortfield): Renamed from set_sort_field.
