--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-12-14  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* configure.in (OPT_WAKATI_DEFAULT): Set default to
+	"none". [namazu-dev 997] 
+
 1999-12-13  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* configure.in (AM_INIT_AUTOMAKE): Bumped version number to 1.9.12.
