--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-12-14  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* nmz/search.c (do_phrase_search): Don't interrupt phrase search
+	halfway for storing hitnums of all words consist the phrase.
+
 	* src/output.c: Set pageindex to 1 as default. [namazu-dev 1001]
 
 	* configure.in (OPT_WAKATI_DEFAULT): Set default to
